prevent last row of table from being occluded when scrollbars are hidden on macos
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@22681 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/src/Components/Mesa/style/Ui/DataTable.scss
+++ b/View/src/Components/Mesa/style/Ui/DataTable.scss
@@ -20,9 +20,11 @@
         overflow-y: auto;
         // table { table-layout: fixed; }
       }
-      .DataTable-Body {
 
+      .DataTable-Body {
+        padding-bottom: 1.5em; /* prevent macos scrollbar from occluding last row */
       }
+
       .DataTable-Header {
         overflow: hidden;
       }
